kubernetes/core.bak/monitor/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
    traefik.ingress.kubernetes.io/websocket: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.bhamm-lab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: monitor-kube-prometheus-st-prometheus
          port: 9090
  tls:
    secretName: bhamm-lab-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.bhamm-lab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: monitor-kube-prometheus-st-alertmanager
          port: 9093
  tls:
    secretName: bhamm-lab-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
    traefik.ingress.kubernetes.io/websocket: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.bhamm-lab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: monitor-grafana
          port: 80
  tls:
    secretName: bhamm-lab-tls
